# tom.camp-flask

./: .gitignore  .pre-commit-config.yaml  Dockerfile  bandit.yaml  docker-compose.yml  hello.py  pyproject.toml  requirements.txt
app/: __init__.py  app.py  settings.py
app/static/css/: styles.css  styles.css.map  styles.scss
app/static/files/: quotes.py
app/static/pico-main/.github/: CONTRIBUTING.md
app/static/pico-main/.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
app/static/pico-main/scripts/: build-themes.js
app/static/pico-main/scss/: pico.classless.css  pico.classless.css.map  pico.colors.css  pico.colors.css.map  pico.conditional.css  pico.conditional.css.map  pico.css  pico.css.map  pico.fluid.classless.css  pico.fluid.classless.css.map
app/templates/: about.html  base.html  footer.html  index.html  nav.html
tests/: test_index.py  test_routes.py
